# ric-plt-xapp-frame-rust

./: .gitignore  .gitmodules  .gitreview  Cargo.toml  INFO.yaml  README.md  groups  project.config  test_route.rt
.github/workflows/: ci.yml
api/: rs-generator.yaml
api/.openapi-generator/: FILES
api/src/models/: config_metadata.rs  subscription_params_e2_subscription_directives.rs  subscription_response.rs
ci/: Dockerfile  entrypoint.sh
registration-api/: Cargo.toml  appmgr_rest_api.yaml
registration-api/.openapi-generator/: FILES
registration-api/src/: lib.rs
registration-api/src/apis/: configuration.rs  health_api.rs  mod.rs  registration_api.rs  subscriptions_api.rs  xapp_api.rs
registration-api/src/models/: config_metadata.rs  config_validation_error.rs  deregister_request.rs  event_type.rs  mod.rs  register_request.rs  subscription.rs  subscription_data.rs  subscription_notification.rs  subscription_request.rs  subscription_response.rs  x_app_config.rs  xapp.rs  xapp_descriptor.rs  xapp_instance.rs
rmr/: Cargo.toml  README.md  build.rs  wrapper.h
rmr/examples/: simple_rmr_client.rs
rmr/src/: client.rs  error.rs  lib.rs  mbuf.rs  processor.rs  receiver.rs  rmr_int.rs
rnib/: Cargo.toml  README.md  build.rs
rnib/src/: lib.rs  reader.rs
sdl/: Cargo.toml  README.md
sdl/src/: api.rs  lib.rs
sdl/src/backends/: mod.rs  redis.rs  rnib.rs
sdl/tests/: mod.rs
sdl/tests/backends/: mod.rs  redis.rs
subscription-api/: .openapi-generator-ignore  Cargo.toml
subscription-api/src/: lib.rs
subscription-api/src/apis/: common_api.rs  configuration.rs  mod.rs  xapp_api.rs
subscription-api/src/models/: action_to_be_setup.rs  mod.rs  subscription_data.rs  subscription_detail.rs  subscription_instance.rs  subscription_params.rs  subscription_params_client_endpoint.rs  subsequent_action.rs  x_app_config.rs
xapp/: Cargo.toml
xapp/.cargo/: config.toml
xapp/examples/: basic_pong_xapp.rs
xapp/src/: error.rs  lib.rs  xapp.rs
xapp/src/xapp/: registration.rs  subscription.rs  webserver.rs
xapp/src/xapp/alarms/: client.rs  mod.rs  types.rs
xapp/src/xapp/config/: mod.rs
xapp/src/xapp/metrics/: mod.rs
xapp/tests/: mod.rs
