[package]
name = "rmr"
version = "0.3.0-dev"
edition = "2018"
description = "A Rust library wrapping the O-RAN Software Community RIC Message Router (RMR) library (librmr)"
readme = "README.md"
license-file = "LICENSE.txt"
keywords = ["o-ran", "protocol", "bindings"]
categories = ["external-ffi-bindings", "network-programming"]
links = "librmr"
publish = false

[dependencies]
serde_json = "1.0"
epoll = "4.3"
log = "0.4"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.60"

