[package]
name = "rnib"
version = "0.2.0"
edition = "2018"
description = "O-RAN Software Community NodeB RNIB ProtoBuf Entities"
readme = "README.md"
license-file = "LICENSE.txt"
keywords = ["o-ran", "protocol", "protobuf"]
categories = ["encoding", "network-programming"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { version = "0.11" }

[build-dependencies]
prost-build = { version = "0.11" }

