[package]
name = "sdl"
version = "0.2.0"
edition = "2018"
description = "A Rust crate for working with Shared Data Layer (SDL)."
readme = "README.md"
license-file = "LICENSE.txt"
keywords = ["o-ran", "database"]
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.23" }
crc32fast = "1.3"
rnib = { path = "../rnib" }
prost = "0.11"
log = "0.4"
