[package]
name = "xapp"
version = "0.1.0"
edition = "2018"
description = "An Open-Source Framework for Rust-based xApps on the O-RAN Software Community Near-Realtime RIC"
readme = "README.md"
license-file = "LICENSE.txt"
keywords = ["o-ran", "xapp", "framework"]
categories = ["development-tools", "network-programming"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
log = "0.4"

# These are our crates
rmr = { path = "../rmr" }
sdl = { path = "../sdl" }
rnib = { path = "../rnib" }
