[package]
name = "xapp"
version = "0.3.0-dev"
edition = "2018"
description = "An Open-Source Framework for Rust-based xApps on the O-RAN Software Community Near-Realtime RIC"
readme = "README.md"
license-file = "LICENSE.txt"
keywords = ["o-ran", "xapp", "framework"]
categories = ["development-tools", "network-programming"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0",  features = ["derive"] }
serde_json = "1.0"
log = "0.4"
reqwest = { version = "0.11", default-features = false, features = [ "rustls-tls", "multipart", "json" , "blocking"] }
axum = { version = "0.6" }
tokio = { version = "1", features = [ "macros", "fs" ] }


# These are our crates
rmr = { path = "../rmr" }
sdl = { path = "../sdl" }
rnib = { path = "../rnib" }
registration-api = { path = "../registration-api"}
